--- a/public/game/index.html
+++ b/public/game/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spooky Game</title>
     <script src="https://pixijs.download/v7.2.0-beta/pixi.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" defer></script>
     <script src="./app.js" defer></script>
     <link rel="stylesheet" href="./styles.css">
 </head>
