added spawn points

--- a/client/public/game/index.html
+++ b/client/public/game/index.html
@@ -7,6 +7,7 @@
     <title>Spooky Game</title>
     <script src="https://pixijs.download/v7.2.0-beta/pixi.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.0/socket.io.min.js" defer></script>
     <script src="./app.js" defer></script>
     <link rel="stylesheet" href="./styles.css">
 </head>
